# spl-lint

./: CHANGELOG.md  README.md  pyproject.toml
src/spllint/: __init__.py  cli.py  format.py  parse.py  rules.py
tests/: test_cli.py  test_format.py  test_parse.py  test_rules.py
